tests/fixtures/errors/reserved_member_private.z
# reserved_member_private.z -- a record field named `private` is rejected
# (E0037); only the `private: unit { ... }` visibility form is allowed.

cfg: record {
    private: 0
}

main: function is {
    print "unreachable"
}
